<resources>
    <string name="app_name">SpaceNBeyond</string>
    <string name="j_tem_uma_conta_fa_a">Já tem uma conta? Faça</string>
    <string name="crie_hashtags_a_partir_da_foto_do_dia_da_nasa_e_compartilhe_seus_posts_criativos">Crie hashtags a partir da foto do dia da NASA e compartilhe seus posts criativos!</string>
    <string name="facebook">Facebook</string>
    <string name="OU">OU</string>
    <string name="criar_conta">Criar conta</string>
    <string name="senha">Senha</string>
    <string name="nova_senha">Nova senha</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="ainda_n_o_tem_conta">Ainda não tem conta?</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="alterar_foto">Alterar foto</string>
    <string name="salvar_alteracoes">Salvar alterações</string>
    <string name="logout">Logout</string>
    <string name="excluir_conta">Excluir conta</string>
    <string name="pt">PT</string>
    <string name="eng">ENG</string>
    <string name="hashtag_do_dia"># do dia</string>
    <string name="escolha_foto">1| Escolha a foto do dia</string>
    <string name="clique_no">Clique no dia desejado ou abra o calendário.</string>
    <string name="deslize_para">Deslize para a direita para ver as fotos dos dias anteriores.</string>
    <string name="escolha_idioma">Escolha o idioma da descrição da foto.</string>
    <string name="gerando_hashtags">2 | Gerando as Hashtags</string>
    <string name="clique_icone">Clique no ícone Hashtag na barra de navegação.</string>
    <string name="app_sorteara">O app sorteará duas palavras da descrição da foto do dia para criar as hashtags.</string>
    <string name="clique_camera">Clique na câmera e tire fotos inspiradas nas hashtags sorteadas!</string>
    <string name="home">Home</string>
    <string name="hashtags">Hashtags</string>
    <string name="ajuda">Ajuda</string>
    <string name="marca_do_app">Marca do App</string>
    <string name="botao_voltar">botão voltar</string>
    <string name="passo1_selecionar_data">Passo 1. Selecionar a data usando calendário.</string>
    <string name="passo2_desliza">Passo 2. Deslizar a tela com o dedo para trocar a foto.</string>
    <string name="passo3_idioma">Passo 3. Escolha o idioma português ou inglês para a descrição.</string>
    <string name="passo4_clique_hashtag">Passo 4. Clique no item hashtag.</string>
    <string name="passo5_hashtags_geradas">Passo 5. Suas hashtags foram geradas.</string>
    <string name="passo6_tire_fotos">Passo 6. Tire suas fotos a partir das hashtags geradas.</string>
    <string name="botao_sair">botão sair</string>
    <string name="botao_apagar_conta">botão apagar conta</string>
    <string name="botao_download">botão download</string>
    <string name="botao_compartilhar">botão compartilhar</string>
    <string name="botao_favoritar">botão favoritar</string>
    <string name="botao_editar_conta">botão editar conta</string>
    <string name="botao_calendario">botão calendário</string>
    <string name="foto_do_dia_da_nasa">foto do dia da nasa</string>
    <string name="jan">Jan</string>
    <string name="fev">Fev</string>
    <string name="mar">Mar</string>
    <string name="abr">Abr</string>
    <string name="mai">Mai</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="ago">Ago</string>
    <string name="set">Set</string>
    <string name="out">Out</string>
    <string name="nov">Nov</string>
    <string name="dez">Dez</string>
    <string name="favoritos">Favoritos</string>
    <string name="facebook_app_id">911193665981835</string>
    <string name="fb_login_protocol_scheme">fb911193665981835</string>
    <string name="imagem_capturada">Imagem capturada</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>