<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Views.LoginActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="16dp"
        android:background="@color/ColorBranco"
        android:textColorHint="@color/ColorPreto"
        app:layout_constraintBottom_toTopOf="@+id/txtSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSenha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="32dp"
        android:background="@color/ColorBranco"
        android:textColorHint="@color/ColorPreto"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:inputType="textPassword"
            android:hint="@string/senha"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/login"
        android:textAppearance="@style/criarButton"
        android:textColor="@color/ColorPreto"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/textEsqueci"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSenha"
        tools:ignore="MissingConstraints"
        tools:text="@string/login" />

    <TextView
        android:id="@+id/textEsqueci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/esqueci_minha_senha"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view"
        android:layout_width="115dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/ColorBranco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEsqueci" />

    <TextView
        android:id="@+id/text_ou"
        android:layout_width="26dp"
        android:layout_height="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/OU"
        android:textColor="@color/ColorBranco"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view2"
        android:layout_width="115dp"
        android:layout_height="1dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="8dp"
        android:background="@color/google_button"
        android:fontFamily="@font/fira_sans"
        android:text="@string/google"
        android:textAppearance="@style/googleButton"
        android:textColor="@color/ColorBranco"
        android:textSize="14sp"
        app:backgroundTint="@color/google_button"
        app:icon="@drawable/ic_google"
        app:iconSize="28dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/facebookButton"
        app:layout_constraintEnd_toStartOf="@+id/facebookButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/facebookButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/facebookButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="45dp"
        android:background="@color/facebook_button"
        android:fontFamily="@font/fira_sans"
        android:text="@string/facebook"
        android:textAppearance="@style/facebookButton"
        android:textColor="@color/ColorBranco"
        android:textColorHighlight="@color/facebook_button"
        android:textSize="14sp"
        app:backgroundTint="@color/facebook_button"
        app:icon="@drawable/ic_facebook"
        app:iconSize="28dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/googleButton"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textAinda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/ainda_n_o_tem_conta"
        android:textColor="@color/ColorBranco"
        app:layout_constraintBottom_toBottomOf="@+id/textCadastreSe"
        app:layout_constraintEnd_toStartOf="@+id/textCadastreSe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textCadastreSe"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textCadastreSe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/cadastre_se"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/facebookButton"
        app:layout_constraintStart_toEndOf="@id/textAinda"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>